chore: remove unused function

--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
       "import": "./dist/http.mjs",
       "require": "./dist/http.js"
     },
+    "./ts": {
+      "types": "./dist/index.d.ts"
+    },
     "./*": "./*"
   },
   "scripts": {
