--- a/package.json
+++ b/package.json
@@ -3,12 +3,33 @@
   "version": "1.0.5",
   "description": "runafe share",
   "author": "wangxdmm <1121292341@qq.com>",
-  "homepage": "",
   "license": "ISC",
+  "homepage": "",
+  "sideEffects": false,
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs"
+    },
+    "./helpers": {
+      "types": "./dist/helpers.d.ts",
+      "require": "./dist/helpers.js",
+      "import": "./dist/helpers.mjs"
+    },
+    "./http": {
+      "types": "./dist/http.d.ts",
+      "require": "./dist/http.js",
+      "import": "./dist/http.mjs"
+    },
+    "./ts": {
+      "types": "./dist/index.d.ts"
+    },
+    "./*": "./*"
+  },
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "sideEffects": false,
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -20,38 +41,20 @@
   "publishConfig": {
     "access": "public"
   },
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
-    },
-    "./helpers": {
-      "types": "./dist/helpers.d.ts",
-      "import": "./dist/helpers.mjs",
-      "require": "./dist/helpers.js"
-    },
-    "./http": {
-      "types": "./dist/http.d.ts",
-      "import": "./dist/http.mjs",
-      "require": "./dist/http.js"
-    },
-    "./ts": {
-      "types": "./dist/index.d.ts"
-    },
-    "./*": "./*"
-  },
   "scripts": {
     "build": "tsup",
-    "dev": "cross-env DEV=1 tsup --watch"
+    "dev": "cross-env DEV=1 tsup --watch",
+    "lint": "eslint . --fix"
   },
   "peerDependencies": {
     "axios": "^1.3.4"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.36.0",
     "@types/node": "^18.15.2",
     "axios": "^1.3.4",
     "cross-env": "^7.0.3",
+    "eslint": "^8.36.0",
     "tsup": "^6.5.0",
     "typescript": "5.1.0-dev.20230313"
   }
