--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@runafe/platform-share",
-  "version": "1.0.5",
+  "version": "1.0.7",
   "description": "runafe share",
   "author": "wangxdmm <1121292341@qq.com>",
   "license": "ISC",
@@ -44,18 +44,23 @@
   "scripts": {
     "build": "tsup",
     "dev": "cross-env DEV=1 tsup --watch",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "test:dev": "vitest dev",
+    "test": "vitest run"
   },
   "peerDependencies": {
     "axios": "^1.3.4"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.36.0",
+    "@types/moxios": "^0.4.15",
     "@types/node": "^18.15.2",
     "axios": "^1.3.4",
     "cross-env": "^7.0.3",
     "eslint": "^8.36.0",
+    "moxios": "^0.4.0",
     "tsup": "^6.5.0",
-    "typescript": "5.1.0-dev.20230313"
+    "typescript": "latest",
+    "vitest": "^0.29.3"
   }
 }
