--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,11 @@
 {
-  "compilerOptions": {
-    "useDefineForClassFields": true,
-    "noImplicitThis": true,
-    "preserveValueImports": true,
-    "importsNotUsedAsValues": "error",
-    "ignoreDeprecations": "5.0",
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "jsx": "preserve",
-    "importHelpers": true,
-    "moduleResolution": "bundler",
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "allowJs": true,
-    "target": "ES2018",
-    "module": "ESNext",
-    "noImplicitAny": false,
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
-    "rootDir": "./",
-    "lib": ["ES2018", "DOM", "DOM.Iterable"],
-    // "suppressImplicitAnyIndexErrors": true,
-    "allowSyntheticDefaultImports": true,
-    "types": ["node"]
-  },
-  "include": ["./**/*.ts"],
-  "exclude": ["dist/", "node_modules/"]
+  "files": [],
+  "references": [
+    {
+      "path": "./tsconfig.lib.json"
+    },
+    {
+      "path": "./tsconfig.vitest.json"
+    }
+  ]
 }
