--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@runafe/platform-share",
-  "version": "1.0.8",
+  "version": "1.0.10",
   "description": "runafe share",
   "author": "wangxdmm <1121292341@qq.com>",
   "license": "ISC",
@@ -51,8 +51,12 @@
   "peerDependencies": {
     "axios": "^1.3.4"
   },
+  "dependencies": {
+    "clone": "^2.1.2"
+  },
   "devDependencies": {
     "@antfu/eslint-config": "^0.36.0",
+    "@types/clone": "^2.1.1",
     "@types/moxios": "^0.4.15",
     "@types/node": "^18.15.2",
     "axios": "^1.3.4",
