--- a/package.json
+++ b/package.json
@@ -12,19 +12,6 @@
       "require": "./dist/index.js",
       "import": "./dist/index.mjs"
     },
-    "./helpers": {
-      "types": "./dist/helpers.d.ts",
-      "require": "./dist/helpers.js",
-      "import": "./dist/helpers.mjs"
-    },
-    "./http": {
-      "types": "./dist/http.d.ts",
-      "require": "./dist/http.js",
-      "import": "./dist/http.mjs"
-    },
-    "./ts": {
-      "types": "./dist/index.d.ts"
-    },
     "./*": "./*"
   },
   "main": "./dist/index.js",
@@ -42,7 +29,7 @@
     "access": "public"
   },
   "scripts": {
-    "build": "tsup",
+    "build": "pnpm exec rimraf dist && rollup -c rollup.config.js",
     "dev": "cross-env DEV=1 tsup --watch",
     "lint": "eslint . --fix",
     "test:dev": "vitest dev",
@@ -52,21 +39,28 @@
   "peerDependencies": {
     "axios": "^1.3.4"
   },
-  "dependencies": {
-    "clone": "^2.1.2"
-  },
   "devDependencies": {
     "@antfu/eslint-config": "^0.36.0",
     "@types/clone": "^2.1.1",
     "@types/moxios": "^0.4.15",
     "@types/node": "^18.15.2",
+    "@types/throttle-debounce": "^5.0.0",
     "axios": "^1.3.4",
+    "bumpp": "^9.1.1",
+    "clone": "^2.1.2",
     "cross-env": "^7.0.3",
+    "esbuild": "^0.18.14",
+    "esbuild-register": "^3.4.2",
     "eslint": "^8.36.0",
     "moxios": "^0.4.0",
     "prettier": "^2.8.8",
-    "tsup": "^6.7.0",
-    "typescript": "latest",
+    "rimraf": "^5.0.1",
+    "rollup": "^3.26.3",
+    "rollup-plugin-dts": "^5.3.0",
+    "rollup-plugin-esbuild": "^5.0.0",
+    "rollup-plugin-pure": "^0.1.1",
+    "throttle-debounce": "^5.0.0",
+    "typescript": "^5.1.6",
     "vitest": "^0.29.3"
   }
 }
