--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@runafe/platform-share",
-  "version": "1.1.0-beta.1",
+  "version": "1.1.0",
   "description": "runafe share",
   "author": "wangxdmm <1121292341@qq.com>",
   "license": "ISC",
@@ -34,7 +34,7 @@
     "lint": "eslint . --fix",
     "test:dev": "vitest dev",
     "test": "vitest run",
-    "release": "bumpp --commit --tag"
+    "release": "bumpp --commit --tag --push=false"
   },
   "peerDependencies": {
     "axios": "^1.3.4"
