--- a/package.json
+++ b/package.json
@@ -1,68 +1,46 @@
 {
-  "name": "@runafe/platform-share",
-  "version": "1.1.5",
-  "description": "runafe share",
-  "author": "wangxdmm <1121292341@qq.com>",
-  "license": "ISC",
-  "homepage": "",
-  "jsdelivr": "dist/index.umd.js",
-  "unpkg": "dist/index.umd.js",
-  "sideEffects": false,
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.mjs"
-    },
-    "./*": "./*"
-  },
-  "main": "./dist/index.mjs",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
-  },
-  "files": [
-    "dist",
-    "README.md"
+  "private": true,
+  "description": "A package that includes daily development tools",
+  "author": "wangxdmm <lovingskymm@gmail.com>",
+  "license": "MIT",
+  "homepage": "https://github.com/wangxdmm/monan",
+  "keywords": [
+    "axios",
+    "types",
+    "utils"
   ],
-  "publishConfig": {
-    "access": "public"
-  },
   "scripts": {
-    "build": "pnpm exec rimraf dist && rollup -c rollup.config.js",
+    "build": "esno ./scripts/build.ts",
     "dev": "rollup -c rollup.config.js -w",
     "lint": "eslint . --fix",
     "test:dev": "vitest dev",
     "test": "vitest run",
-    "release": "bumpp --commit --tag --push=false"
-  },
-  "peerDependencies": {
-    "axios": "^1.3.4"
+    "release": "esno ./scripts/release.ts"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.36.0",
-    "@types/clone": "^2.1.1",
     "@types/moxios": "^0.4.15",
-    "@types/node": "^18.15.2",
-    "@types/throttle-debounce": "^5.0.0",
-    "axios": "^1.3.4",
-    "bumpp": "^9.1.1",
-    "clone": "^2.1.2",
+    "@types/node": "^18.17.17",
+    "bumpp": "^9.2.0",
+    "consola": "^3.2.3",
     "cross-env": "^7.0.3",
-    "esbuild": "^0.18.14",
-    "esbuild-register": "^3.4.2",
-    "eslint": "^8.36.0",
+    "enquirer": "^2.4.1",
+    "env-cmd": "^10.1.0",
+    "esbuild": "^0.18.20",
+    "esbuild-register": "^3.5.0",
+    "eslint": "^8.49.0",
+    "esno": "^0.17.0",
+    "execa": "^8.0.1",
+    "fast-glob": "^3.3.1",
     "moxios": "^0.4.0",
     "prettier": "^2.8.8",
     "rimraf": "^5.0.1",
-    "rollup": "^3.26.3",
-    "rollup-plugin-dts": "^5.3.0",
+    "rollup": "^3.29.2",
+    "rollup-plugin-dts": "^5.3.1",
     "rollup-plugin-esbuild": "^5.0.0",
     "rollup-plugin-pure": "^0.1.1",
-    "throttle-debounce": "^5.0.0",
-    "typescript": "^5.1.6",
-    "vitest": "^0.29.3"
+    "syncpack": "^11.2.1",
+    "typescript": "^5.2.2",
+    "vitest": "^0.34.4"
   }
 }
