--- a/.github/workflows/monan.yml
+++ b/.github/workflows/monan.yml
@@ -3,7 +3,7 @@ name: monan utils
 on:
   push:
     branches:
-      - 'dev'
+      - dev
       - 'hot-fix/**'
 
 jobs:
@@ -25,7 +25,7 @@ jobs:
         with:
           node-version: 18
           registry-url: https://registry.npmjs.org/
-          cache: 'pnpm'
+          cache: pnpm
 
       - name: Install dependencies
         run: pnpm install
