chore: update package.json info

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -19,7 +19,8 @@
   "types": "./dist/index.d.ts",
   "files": [
     "dist",
-    "package.json"
+    "package.json",
+    "README.md"
   ],
   "publishConfig": {
     "access": "public"
