--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vitest": "^0.34.6",
     "prettier": "^3.1.0",
     "rimraf": "^5.0.5",
+    "prettier-plugin-jsdoc": "^1.1.1",
     "rollup-plugin-pure": "^0.2.1",
     "syncpack": "^11.2.1",
     "typescript": "^5.3.3"
