feat: update eslint rule and add alterCondition to get

--- a/packages/easy-axios/package.json
+++ b/packages/easy-axios/package.json
@@ -17,9 +17,9 @@
   "jsdelivr": "dist/index.umd.js",
   "types": "./dist/index.d.ts",
   "files": [
+    "README.md",
     "dist",
-    "package.json",
-    "README.md"
+    "package.json"
   ],
   "peerDependencies": {
     "axios": "^1.5.0"
