--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,34 +1,34 @@
 {
   "compilerOptions": {
+    "target": "ES2018",
+    "jsx": "preserve",
+    "lib": ["ES2018", "DOM", "DOM.Iterable"],
     "useDefineForClassFields": true,
+    "baseUrl": "./",
+    "rootDir": "./",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "paths": {
+      "@monan/*": ["packages/*/index.ts"]
+    },
+    "resolveJsonModule": true,
+    "strict": true,
     "noImplicitThis": true,
     "preserveValueImports": true,
     "importsNotUsedAsValues": "error",
     "ignoreDeprecations": "5.0",
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "jsx": "preserve",
     "importHelpers": true,
-    "moduleResolution": "bundler",
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
     "allowJs": true,
-    "target": "ES2018",
-    "module": "ESNext",
     "noImplicitAny": false,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
-    "rootDir": "./",
-    "lib": ["ES2018", "DOM", "DOM.Iterable"],
-    // "suppressImplicitAnyIndexErrors": true,
-    "allowSyntheticDefaultImports": true,
     "types": ["node"],
-    "baseUrl": "./",
-    "paths": {
-      "@monan/*": ["packages/*/index.ts"]
-    }
+    // "suppressImplicitAnyIndexErrors": true,
+    "allowSyntheticDefaultImports": true
   },
   "exclude": ["dist", "node_modules/"]
 }
