--- a/.prettierrc.json5
+++ b/.prettierrc.json5
@@ -1,8 +1,8 @@
 {
-  semi: false,
-  singleQuote: true,
-  printWidth: 80,
-  trailingComma: 'all',
-  arrowParens: 'always',
-  plugins: ['prettier-plugin-jsdoc'],
+  "semi": false,
+  "singleQuote": true,
+  "printWidth": 80,
+  "trailingComma": "all",
+  "arrowParens": "always",
+  "plugins": ["prettier-plugin-jsdoc"]
 }
