--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -9,13 +9,13 @@
     "./dist/*": "./dist/*",
     "./*": "./*"
   },
-  "files": [
-    "dist",
-    "package.json",
-    "README.md"
-  ],
   "module": true,
   "types": "dist/index.d.ts",
+  "files": [
+    "README.md",
+    "dist",
+    "package.json"
+  ],
   "publishConfig": {
     "access": "public"
   }
