feat: update build script

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -12,23 +12,23 @@
       "@monan/*": ["packages/*/index.ts"]
     },
     "resolveJsonModule": true,
-    "strict": true,
-    "noImplicitThis": true,
-    "preserveValueImports": true,
-    "importsNotUsedAsValues": "error",
-    "ignoreDeprecations": "5.0",
-    "forceConsistentCasingInFileNames": true,
-    "importHelpers": true,
+    "types": ["node"],
     "allowJs": true,
+    "strict": true,
     "noImplicitAny": false,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
+    "noImplicitThis": true,
     "declaration": true,
     "declarationMap": true,
+    "importHelpers": true,
+    "importsNotUsedAsValues": "error",
+    "preserveValueImports": true,
+    "ignoreDeprecations": "5.0",
     "sourceMap": true,
-    "types": ["node"],
     // "suppressImplicitAnyIndexErrors": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true
   },
   "exclude": ["dist", "node_modules/"]
 }
