--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "scripts": {
     "build": "esno ./scripts/build.ts",
-    "dev": "rollup -c rollup.config.js -w",
+    "dev": "rollup -c rollup.config.ts --configPlugin rollup-plugin-esbuild -w",
     "lint": "eslint . --fix",
     "test:dev": "vitest dev",
     "test": "vitest run",
@@ -33,15 +33,15 @@
     "execa": "^8.0.1",
     "fast-glob": "^3.3.2",
     "moxios": "^0.4.0",
+    "prettier": "^3.2.5",
+    "prettier-plugin-jsdoc": "^1.3.0",
+    "rimraf": "^5.0.5",
     "rollup": "^4.9.6",
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-esbuild": "^6.1.1",
-    "vitest": "^1.2.2",
-    "prettier": "^3.2.5",
-    "rimraf": "^5.0.5",
-    "prettier-plugin-jsdoc": "^1.3.0",
     "rollup-plugin-pure": "^0.2.1",
     "syncpack": "^12.3.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.2.2"
   }
 }
