--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,5 +1,12 @@
 {
   "extends": "./tsconfig.base.json",
-  "include": ["scripts"],
-  "exclude": ["**/__tests__", "**/dist", "**/node_modules"]
+  "include": [
+    "scripts",
+    "rollup.config.ts"
+  ],
+  "exclude": [
+    "**/__tests__",
+    "**/dist",
+    "**/node_modules"
+  ]
 }
