feat: add des to api func

--- a/.env-cmdrc
+++ b/.env-cmdrc
@@ -5,7 +5,9 @@
   "build": {
     "DEV": false,
     "PRE": false,
-    "PKGS": [],
+    "PKGS": [
+      "-w"
+    ],
     "DEBUG": false
   },
   "release": {
