--- a/.env-cmdrc
+++ b/.env-cmdrc
@@ -5,9 +5,7 @@
   "build": {
     "DEV": false,
     "PRE": false,
-    "PKGS": [
-      "dev"
-    ],
+    "PKGS": [],
     "DEBUG": false
   },
   "release": {
