--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "release": "esno ./scripts/release.ts"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.8.1",
+    "@antfu/eslint-config": "^2.13.3",
     "@types/moxios": "^0.4.17",
     "@types/node": "^20.11.26",
+    "@unocss/eslint-plugin": "^0.59.1",
     "bumpp": "^9.4.0",
     "consola": "^3.2.3",
     "cross-env": "^7.0.3",
