--- a/package.json
+++ b/package.json
@@ -18,31 +18,32 @@
     "release": "esno ./scripts/release.ts"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.13.3",
+    "@antfu/eslint-config": "2.22.0-beta.3",
     "@types/moxios": "^0.4.17",
-    "@types/node": "^20.11.26",
-    "@unocss/eslint-plugin": "^0.59.1",
-    "bumpp": "^9.4.0",
+    "@types/node": "^20.14.10",
+    "@unocss/eslint-plugin": "^0.61.3",
+    "bumpp": "^9.4.1",
     "consola": "^3.2.3",
     "cross-env": "^7.0.3",
     "enquirer": "^2.4.1",
     "env-cmd": "^10.1.0",
-    "esbuild": "^0.20.1",
+    "esbuild": "^0.23.0",
     "esbuild-register": "^3.5.0",
-    "eslint": "^8.57.0",
+    "eslint": "^9.6.0",
+    "eslint-plugin-format": "^0.1.2",
     "esno": "^4.7.0",
-    "execa": "^8.0.1",
+    "execa": "^9.3.0",
     "fast-glob": "^3.3.2",
     "moxios": "^0.4.0",
-    "prettier": "^3.2.5",
+    "prettier": "^3.2.2",
     "prettier-plugin-jsdoc": "^1.3.0",
-    "rimraf": "^5.0.5",
-    "rollup": "^4.12.1",
-    "rollup-plugin-dts": "^6.1.0",
+    "rimraf": "^6.0.0",
+    "rollup": "^4.18.1",
+    "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-esbuild": "^6.1.1",
     "rollup-plugin-pure": "^0.2.1",
-    "syncpack": "^12.3.0",
-    "typescript": "^5.4.2",
-    "vitest": "^1.3.1"
+    "syncpack": "^12.3.3",
+    "typescript": "^5.5.3",
+    "vitest": "^2.0.1"
   }
 }
