--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.1",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts"
+      "types": {
+        "development": "./index.ts",
+        "default": "./dist/index.d.ts"
+      }
     },
     "./package.json": "./package.json",
     "./dist/*": "./dist/*",
