--- a/package.json
+++ b/package.json
@@ -20,30 +20,30 @@
   "devDependencies": {
     "@antfu/eslint-config": "2.22.0-beta.3",
     "@types/moxios": "^0.4.17",
-    "@types/node": "^20.14.10",
-    "@unocss/eslint-plugin": "^0.61.3",
-    "bumpp": "^9.4.1",
+    "@types/node": "^20.14.15",
+    "bumpp": "^9.5.1",
     "consola": "^3.2.3",
     "cross-env": "^7.0.3",
     "enquirer": "^2.4.1",
     "env-cmd": "^10.1.0",
     "esbuild": "^0.23.0",
-    "esbuild-register": "^3.5.0",
-    "eslint": "^9.6.0",
+    "esbuild-register": "^3.6.0",
+    "eslint": "^9.9.0",
     "eslint-plugin-format": "^0.1.2",
     "esno": "^4.7.0",
     "execa": "^9.3.0",
     "fast-glob": "^3.3.2",
     "moxios": "^0.4.0",
-    "prettier": "^3.2.2",
+    "prettier": "^3.3.3",
     "prettier-plugin-jsdoc": "^1.3.0",
-    "rimraf": "^6.0.0",
-    "rollup": "^4.18.1",
+    "rimraf": "^6.0.1",
+    "rollup": "^4.20.0",
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-esbuild": "^6.1.1",
     "rollup-plugin-pure": "^0.2.1",
-    "syncpack": "^12.3.3",
-    "typescript": "^5.5.3",
-    "vitest": "^2.0.1"
+    "syncpack": "^12.4.0",
+    "taze": "^0.16.5",
+    "typescript": "^5.5.4",
+    "vitest": "^2.0.5"
   }
 }
