--- a/packages/easy-axios/package.json
+++ b/packages/easy-axios/package.json
@@ -3,7 +3,10 @@
   "version": "1.1.4",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
+      "types": {
+        "development": "./index.ts",
+        "default": "./dist/index.d.ts"
+      },
       "import": "./dist/index.mjs",
       "require": "./dist/index.cjs",
       "default": "./dist/index.mjs"
@@ -28,11 +31,10 @@
     "access": "public"
   },
   "dependencies": {
-    "@monan/shared": "workspace:*",
-    "@monan/types": "workspace:*",
-    "md5": "^2.3.0"
+    "ohash": "^1.1.3"
   },
   "devDependencies": {
-    "@types/md5": "^2.3.5"
+    "@monan/shared": "workspace:*",
+    "@monan/types": "workspace:*"
   }
 }
