refactor: support butler

--- a/.env-cmdrc
+++ b/.env-cmdrc
@@ -1,15 +1,5 @@
 {
   "dev": {
-    "DEV": true
-  },
-  "build": {
-    "DEV": false,
-    "PRE": false,
-    "PKGS": [],
-    "DEBUG": false
-  },
-  "release": {
-    "DEV": false,
-    "PKGS": []
+    "DEV": 1 
   }
 }
