--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -5,8 +5,8 @@
   "exports": {
     ".": {
       "types": {
-        "development": "./index.ts",
-        "default": "./dist/index.d.ts"
+        "development": "./src/index.ts",
+        "default": "./types/index.d.ts"
       },
       "import": "./dist/index.mjs",
       "default": "./dist/index.mjs"
@@ -15,9 +15,8 @@
     "./dist/*": "./dist/*",
     "./*": "./*"
   },
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/index.mjs",
+  "types": "./types/index.d.ts",
   "files": [
     "README.md",
     "dist",
