--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "moxios": "^0.4.0",
     "prettier": "^3.3.3",
     "prettier-plugin-jsdoc": "^1.3.0",
+    "rollup-plugin-pure": "^0.2.1",
     "taze": "^0.16.7",
-    "typescript": "^5.6.2",
+    "typescript": "5.5.4",
     "unbuild": "3.0.0-rc.7",
     "unplugin-unused": "^0.2.3",
     "vitest": "^2.0.5"
