feat(shared): update set func

--- a/.github/workflows/monan.yml
+++ b/.github/workflows/monan.yml
@@ -30,5 +30,5 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - run: pnpm bu build --ns
+      - run: pnpm bu build --all --ns
       - run: pnpm test
