--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bu": "butler",
     "build": "pnpm bu build",
     "dev": "pnpm bu dev -e dev",
+    "sync": "taze -I",
     "lint": "eslint . --fix",
     "test:dev": "vitest dev",
     "test": "vitest run",
@@ -24,9 +25,9 @@
   "devDependencies": {
     "@antfu/eslint-config": "2.22.0-beta.3",
     "@monan/create-dts": "^0.0.3",
-    "@runafe/butler": "^0.0.19",
+    "@runafe/butler": "^0.0.20",
     "@types/moxios": "^0.4.17",
-    "@types/node": "^20.16.5",
+    "@types/node": "^22.5.4",
     "cross-env": "^7.0.3",
     "env-cmd": "^10.1.0",
     "eslint": "^9.10.0",
@@ -35,11 +36,11 @@
     "prettier": "^3.3.3",
     "prettier-plugin-jsdoc": "^1.3.0",
     "rollup-plugin-pure": "^0.2.1",
-    "taze": "^0.16.7",
+    "taze": "^0.16.8",
     "typescript": "5.5.4",
     "unbuild": "3.0.0-rc.7",
     "unplugin-unused": "^0.2.3",
-    "vitest": "^2.0.5"
+    "vitest": "^2.1.0"
   },
   "butler": {
     "publish": {
